project/logs/20250708_111410.log
Use Adapater:NVIDIA GeForce RTX 4060 Laptop GPU

FeatureLevel : 12.2

Complete create D3D12Device!!!

Begin CompileShader,path:Object3d.VS.hlsl,profike:vs_6_0

Compile Succeeded, path:Object3d.VS.hlsl, profike:vs_6_0
 
Begin CompileShader,path:Object3d.PS.hlsl,profike:ps_6_0

Object3d.PS.hlsl:39:77: error: invalid format for vector swizzle 'direction'
        float NdotL = dot(normalize(input.normal), -gDirectionalLight.color.direction);
                                                                            ^

